--- a/Pilot this/Base.lproj/Main.storyboard
+++ b/Pilot this/Base.lproj/Main.storyboard
@@ -159,13 +159,12 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R0w-7z-3qv">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
-                                    <view clipsSubviews="YES" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="RTt-oi-qJ4" customClass="UIImageView">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="crocs.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="p3q-4h-uLw" userLabel="imageView">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="170"/>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="170" id="MNU-FG-DkO"/>
+                                            <constraint firstAttribute="height" constant="170" id="Tfc-rV-8GI"/>
                                         </constraints>
-                                    </view>
+                                    </imageView>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="3" minValue="1" maxValue="5" translatesAutoresizingMaskIntoConstraints="NO" id="daJ-va-kf1">
                                         <rect key="frame" x="369" y="178" width="204" height="31"/>
                                         <constraints>
@@ -292,24 +291,32 @@
                                             <action selector="addAnnotation:" destination="PL4-Nv-KcG" eventType="touchUpInside" id="ZEA-IQ-2xd"/>
                                         </connections>
                                     </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pzQ-Oa-QvE" customClass="JBLineChartView">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="170"/>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="calibratedRGB"/>
+                                    </view>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="uUP-hd-0sV" secondAttribute="trailing" id="059-hU-ayb"/>
                                     <constraint firstAttribute="centerX" secondItem="06k-Wo-3CS" secondAttribute="centerX" id="0DK-X8-L9z"/>
+                                    <constraint firstItem="daJ-va-kf1" firstAttribute="top" secondItem="p3q-4h-uLw" secondAttribute="bottom" constant="8" id="0Mi-t2-qfn"/>
+                                    <constraint firstItem="p3q-4h-uLw" firstAttribute="leading" secondItem="R0w-7z-3qv" secondAttribute="leading" id="1b8-3n-FS5"/>
+                                    <constraint firstItem="pzQ-Oa-QvE" firstAttribute="bottom" secondItem="p3q-4h-uLw" secondAttribute="bottom" id="3OX-PI-OV6"/>
                                     <constraint firstItem="uUP-hd-0sV" firstAttribute="leading" secondItem="R0w-7z-3qv" secondAttribute="leading" id="3iA-3o-4vM"/>
                                     <constraint firstAttribute="bottom" secondItem="uUP-hd-0sV" secondAttribute="bottom" id="7ET-oi-vZj"/>
-                                    <constraint firstItem="RTt-oi-qJ4" firstAttribute="leading" secondItem="R0w-7z-3qv" secondAttribute="leading" id="98T-BX-cOS"/>
-                                    <constraint firstItem="UWy-7k-amI" firstAttribute="top" secondItem="RTt-oi-qJ4" secondAttribute="bottom" constant="8" id="9pP-Xx-g6d"/>
+                                    <constraint firstItem="p3q-4h-uLw" firstAttribute="top" secondItem="R0w-7z-3qv" secondAttribute="top" id="9d6-ro-NFf"/>
+                                    <constraint firstItem="pzQ-Oa-QvE" firstAttribute="leading" secondItem="R0w-7z-3qv" secondAttribute="leading" id="Dp2-Lp-3a8"/>
                                     <constraint firstItem="06k-Wo-3CS" firstAttribute="top" secondItem="daJ-va-kf1" secondAttribute="bottom" constant="8" id="EUp-2Z-epL"/>
                                     <constraint firstAttribute="centerX" secondItem="daJ-va-kf1" secondAttribute="centerX" id="Fik-Kz-aPt"/>
-                                    <constraint firstItem="daJ-va-kf1" firstAttribute="top" secondItem="RTt-oi-qJ4" secondAttribute="bottom" constant="8" symbolic="YES" id="MAm-Wc-cdN"/>
+                                    <constraint firstAttribute="trailing" secondItem="p3q-4h-uLw" secondAttribute="trailing" id="Hzh-he-4u3"/>
+                                    <constraint firstItem="pzQ-Oa-QvE" firstAttribute="top" secondItem="R0w-7z-3qv" secondAttribute="top" id="MGC-iP-OJu"/>
+                                    <constraint firstAttribute="trailing" secondItem="pzQ-Oa-QvE" secondAttribute="trailing" id="Oeh-k8-Trc"/>
                                     <constraint firstItem="uUP-hd-0sV" firstAttribute="top" secondItem="06k-Wo-3CS" secondAttribute="bottom" constant="8" symbolic="YES" id="PQz-i2-kpK"/>
-                                    <constraint firstItem="06k-Wo-3CS" firstAttribute="top" secondItem="RTt-oi-qJ4" secondAttribute="bottom" constant="8" id="dpA-Au-acI"/>
                                     <constraint firstAttribute="trailing" secondItem="UWy-7k-amI" secondAttribute="trailing" constant="8" id="eof-EG-tEh"/>
+                                    <constraint firstItem="06k-Wo-3CS" firstAttribute="top" secondItem="p3q-4h-uLw" secondAttribute="bottom" constant="8" id="eql-xM-I1e"/>
+                                    <constraint firstItem="UWy-7k-amI" firstAttribute="top" secondItem="p3q-4h-uLw" secondAttribute="bottom" constant="8" id="npf-6n-XpG"/>
                                     <constraint firstItem="UWy-7k-amI" firstAttribute="leading" secondItem="daJ-va-kf1" secondAttribute="trailing" constant="8" symbolic="YES" id="rfK-uS-fPj"/>
                                     <constraint firstItem="06k-Wo-3CS" firstAttribute="leading" secondItem="R0w-7z-3qv" secondAttribute="leading" constant="8" id="twz-be-J1H"/>
-                                    <constraint firstItem="RTt-oi-qJ4" firstAttribute="top" secondItem="R0w-7z-3qv" secondAttribute="top" id="xwl-pE-yAG"/>
-                                    <constraint firstAttribute="trailing" secondItem="RTt-oi-qJ4" secondAttribute="trailing" id="ziR-qz-w1J"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -322,7 +329,7 @@
                                     <mask key="constraints">
                                         <include reference="0DK-X8-L9z"/>
                                         <include reference="EUp-2Z-epL"/>
-                                        <exclude reference="dpA-Au-acI"/>
+                                        <exclude reference="eql-xM-I1e"/>
                                         <exclude reference="twz-be-J1H"/>
                                         <include reference="Fik-Kz-aPt"/>
                                         <exclude reference="eof-EG-tEh"/>
@@ -333,18 +340,19 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottomMargin" secondItem="R0w-7z-3qv" secondAttribute="bottom" id="69L-6G-OIg"/>
-                            <constraint firstAttribute="width" secondItem="RTt-oi-qJ4" secondAttribute="width" id="Hl3-Fy-8NW"/>
                             <constraint firstItem="R0w-7z-3qv" firstAttribute="top" secondItem="xil-nj-hIq" secondAttribute="topMargin" id="OLM-Wl-vwx"/>
                             <constraint firstAttribute="trailingMargin" secondItem="R0w-7z-3qv" secondAttribute="trailing" constant="-16" id="Tbz-i2-pwF"/>
+                            <constraint firstAttribute="width" secondItem="p3q-4h-uLw" secondAttribute="width" id="WDm-tF-1wo"/>
                             <constraint firstItem="R0w-7z-3qv" firstAttribute="leading" secondItem="xil-nj-hIq" secondAttribute="leadingMargin" constant="-16" id="syT-ig-tgv"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="addButton" destination="06k-Wo-3CS" id="Uhz-uq-Bws"/>
                         <outlet property="annotationsTableView" destination="uUP-hd-0sV" id="jrd-49-pQ7"/>
-                        <outlet property="chartView" destination="RTt-oi-qJ4" id="PFS-dh-rzM"/>
+                        <outlet property="imageView" destination="p3q-4h-uLw" id="mko-gW-Knq"/>
                         <outlet property="levelLabel" destination="UWy-7k-amI" id="SJM-dE-nk3"/>
                         <outlet property="levelSlider" destination="daJ-va-kf1" id="JD5-od-vY7"/>
+                        <outlet property="lineChartView" destination="pzQ-Oa-QvE" id="GsJ-9B-UY1"/>
                         <outlet property="scrollView" destination="R0w-7z-3qv" id="Q1F-Bw-9ZH"/>
                     </connections>
                 </viewController>
